syntax = "proto3";

package user;

service UserService {
	rpc CreateUser (UserRequest) returns (UserResponse);
	rpc GetUser (UserIdRequest) returns (UserResponse);

	// Streaming RPC
	rpc ListUsers (Empty) returns (stream UserResponse);
	rpc CreateUsersStream (stream UserRequest) returns (CreateUsersSummary);
}

message UserRequest {
	string name = 1;
	string email = 2;
}

message UserIdRequest {
	string id = 1;
}

message UserResponse {
	string id = 1;
	string name = 2;
	string email = 3;
}

message Empty {}

message CreateUsersSummary {
	int32 createdCount = 1;
}
